src/test/deca/context/valid/eq.deca
{
	float a, b;
	true != true;
	6 == 2;
	a == b;	
	2 != b;
}
