src/test/deca/context/invalid/affectation-wrongTypeAffectationIntFloat.deca
{
	int i = 5;
    float c = 3.2;
    i = c;
}
